--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 :root{
     --color-primario: #FF5331;
-    
+    --color-opuesto:#00ACCE;
+    --color-opuestoDos:#023AA1;
+    --font-style:'Times New Roman', Times, serif;
+
 }
 
 *{
@@ -21,12 +24,15 @@
     padding: 12px 40px;
     align-items: center;
 }
+.navElements:hover{
+    color: var(--color-primario);
+}
 
 .logo{
     display: flex;
     gap: 7px;
     font-size: 23px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: var(--font-style)
 }
 
 .logoFitmeal{
@@ -34,11 +40,12 @@
     height: 25px;
     align-items: center;
 }
+
 ul{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: var(--font-style);
     display: flex;
     list-style-type: none;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 600;
     gap: 16px;
     padding: 16px;
@@ -53,24 +60,25 @@ ul{
 .Sign{
     display: flex;
     gap: 10px;
+    
    
 }
 
 button{
     padding: 10px;
     border-radius: 5px;
-    box-shadow: var(--color-primario);
 }
 
 .SignIn{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family:var(--font-style);
     background-color: white;
     border-color: var(--color-primario); 
     color: var(--color-primario) ;
+   
 }
 
 .SignUp{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family:var(--font-style);
     background-color:var(--color-primario);
     border-color: var(--color-primario); 
     color: white; 
@@ -82,7 +90,25 @@ button{
     justify-content: center;
     align-items: center;
     gap: 20px;
-    padding: 50px;
+    padding: 15px;
+    padding-bottom: 5em;
+    font-family: var(--font-style);
+}
+
+.titleSeccionHeader{
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    gap: 20px;
+    padding: 15px;
+    font-family: var(--font-style);
+}
+.QualityFood{
+    display: flex;
+    gap: 5px;
 }
 #title{
     font-size: 60px;
@@ -90,7 +116,7 @@ button{
 
 .buscador{
     border-radius: 5px;
-    box-shadow: 3px 3px 3px rgba(115, 115, 115, 0.5);
+    box-shadow: 3px 3px 3px rgba(149, 149, 149, 0.5);
     width: 20%;
     display: flex;
     justify-content: space-between;
@@ -103,7 +129,7 @@ button{
 
 }
 .botonDeBusqueda{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family:var(--font-style);
     background-color:var(--color-primario);
     border-color: var(--color-primario); 
     color: white; 
@@ -111,19 +137,265 @@ button{
 }
 
 .seccionUno{
-    /* width: 1000px;
-    height: 2000px; */
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.backgroundRepartidor{
+    display: flex;
+    width: 100%;
+    height: 500px;
+    background-image: url("repartidor.jpg");
+    background-size: cover;
     align-items: center;
 }
 
-.contenedorSeccionUno{
+.seccionDos{
     display: flex;
+    flex-direction: column;
+    font-family: var(--font-style);
     justify-content: center;
     align-items: center;
-    padding: 350px 400px;
-    gap: 24px; 
-    background-image:url(repartidor-comida-cajas-comida.jpg);
+    padding: 50px;
+    gap:60px;
+}
+
+h2{
+    font-size: 50px;
+}
+.pStyle{
+font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+.tituloSeccionDos{
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    font-family: var(--font-style);
+
+}
+
+.FoodCards{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    
+    
+}
+.styleCards{
+
+    display: flex;
+    border-radius: 15px;
+    border: none;
+    outline: rgba(163, 163, 163, 0.5);
+    box-shadow: 2px 2px 2px rgba(163, 163, 163, 0.5);
+    justify-content: center; 
+    align-items: center;
+    font-size: 25px;
+    font-family: var(--font-style);
+    gap: 50px;
+    padding: 25px;
+   
+}
+
+
+.logoCards{
+    filter: invert(100%);
+    background-color:var(--color-opuestoDos);
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.seccionTres{
+    display: flex;
+    flex-direction: column;
+    font-family: var(--font-style);
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    gap:60px;
+}
+
+.tituloSeccionTres{
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    font-family: var(--font-style);
+}
+
+.OfferCards{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.styleCardsSeccionTres{
+    display: flex;
+    border-radius: 2px;
+    border: none;
+    outline: rgba(163, 163, 163, 0.5);
+    box-shadow: 2px 2px 2px rgba(163, 163, 163, 0.5);
+    justify-content: center; 
+    align-items: center;
+    font-size: 25px;
+    font-family: var(--font-style);
+    gap: 50px;
+    padding: 25px;
+}
+
+.logoOffers{
+    padding: 20px;
+    border-radius: 10px;
+    transform: translate(-45px, -10px);
+}
+
+.circulo{
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  background-color:#FDC55E ;  
+}
+
+
+.seccionCuatro{
+    display: flex;
+    flex-direction: column;
+    font-family: var(--font-style);
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    gap:60px;  
+    background-color: #F3F3F3;
+   
+}
+
+
+.tituloSeccionCuatro{
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    font-family: var(--font-style);   
+}
+
+
+.cartasComida{
+    display: flex;
+    flex-wrap: wrap;
+    gap:80px;
+    padding: 60px;
+    justify-content: center;
+
+}
+
+.cartaComida{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    height: 450px;
+    /* border: 1px solid black; */
+    box-shadow:3px 3px 3px rgba(149, 149, 149, 0.5);
+}
+
+.imagen1{
+    width: 300px;
+    height:70%;
+    background-image:url(hamburguesa-angus-barbacoa-600x900.webp);
     background-size: cover;
     background-position: center;
+}
+
+.imagen2{
+    width: 300px;
+    height:70%;
+    background-image:url(hamburguesa-con-guacamole.jpg);
+    background-size: cover;
+    background-position:top right;
+   
+}
+
+.imagen3{
+    width: 300px;
+    height:70%;
+    background-image:url(pizza-caprichosa-o-pizza-capricciosa.jpg);
+    background-size: cover;
+   
+   
+}
+.imagen4{
+    width: 300px;
+    height:70%;
+    background-image:url(pepperoni-pizza-abob-t.jpg);
+    background-size: cover;  
+}
+
+.imagen5{
+    width: 300px;
+    height:70%;
+    background-image:url(salmon-rice-bowl-14.jpg);
+    background-size: cover;  
+    background-position: center;
+}
+
+.imagen6{
+    width: 300px;
+    height:70%;
+    background-image:url(gyudon-7.jpg);
+    background-size: cover;  
+    background-position: center;
+}
+
+.infoCartaComida{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap:5px;
+    font-size: 18px;
+
+}
+.estrellas{
+    display: flex;
+    gap:2px;
+    padding: 5px;
+}
+.textoCartaComida{
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+}
+.price{
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    font-weight: bold;
+    color:var(--color-primario);
+}
+
+.botonCarta{
+   display: flex;
+   flex-direction: column;
+   /* padding: 10px; */
+}
+
+.buttonCartaCompleta{
+    width: 150px;
+    height: 55px;
+    background-color: var(--color-primario);
+    color: white;
+    border: none;
+    box-shadow: 3px 3px 3px rgba(149, 149, 149, 0.5);
 }
